# will-flow

./: README.md
backend/: README.md  pyproject.toml  test_direct_chat.py  test_full_flow.py  test_ragflow_api.py  test_ragflow_chat.py  test_ragflow_connection.py  test_ragflow_correct_api.py  test_ragflow_direct_api.py  test_ragflow_sdk.py  test_ragflow_sdk_direct.py  test_ragflow_upload.py  test_upload.txt  test_will_flow_integration.py  test_will_flow_ragflow.py
backend/src/will_flow/: __init__.py  main.py
backend/src/will_flow/api/api_v1/: api.py
backend/src/will_flow/api/api_v1/endpoints/: chat.py  flows.py  knowledge_base.py  users.py
backend/src/will_flow/core/: config.py
backend/src/will_flow/db/: opensearch.py
backend/src/will_flow/models/: __init__.py  chat.py  flow.py  knowledge_base.py  user.py
backend/src/will_flow/services/: __init__.py  chat_service.py  flow_service.py  kb_service.py  ragflow_service.py  user_service.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/flows/: page.tsx
frontend/src/app/flows/new/: page.tsx
frontend/src/app/knowledge-base/: page.tsx
frontend/src/app/knowledge-bases/: page.tsx
frontend/src/app/knowledge-bases/[id]/: page.tsx
frontend/src/components/: FlowForm.tsx
frontend/src/components/ui/: LoadingSpinner.tsx
frontend/src/lib/: api.ts  auth.ts
