[project]
name = "will-flow"
version = "0.1.0"
description = "Flow Manager and Running Website Backend"
authors = [
    {name = "Dhrupad Sah", email = "thedhrupad@gmail.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "opensearch-py>=2.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "ragflow-sdk",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "uvicorn src.will_flow.main:app --reload"
start = "uvicorn src.will_flow.main:app"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]
